# tinyrl-tetris

./: .gitignore  README.md  run_game.sh  setup.sh
docs/: batched_env_design.md  running_todo_laith.md  running_todo_omeed.md
engine/: CMakeLists.txt  batched_collector.cpp  bindings.cpp  constants.h  game_logic.cpp  input.cpp  main.cpp  main_sdl.cpp  renderer.cpp  sdl_renderer.cpp  tetris.cu  tetrisGame.cpp  timeManager.cpp  worker.cpp
engine/include/: batched_collector.h  constants.h  input.h  pieces.h  renderer.h  sdl_renderer.h  tetrisGame.h  timeManager.h
evaluation/: benchmark.py  visualize.py
rl/: benchmark_envs.py  benchmark_rollouts.py  main.py  network.cu  optimizer.cu  ppo.cu  ppo.py  pyproject.toml  requirements.txt
rl/src/: batched_collector.py  env_wrapper.py  setup_env.py
rl/src/agents/: ppo_agent.py
rl/src/configs/: hyperparameters.py
rl/src/models/: actor_critic.py
rl/src/wrappers/: __init__.py  flatten_observation.py
tests/: CMakeLists.txt  catch2.hpp
tests/engine/: test_edge_cases.cpp  test_tetris_game.cpp
training/: replay_buffer.cu  trainer.cpp
